bổ sung tính năng đánh giá OQA

--- a/Development/WebForm/DongYangweb/DongYangweb.csproj
+++ b/Development/WebForm/DongYangweb/DongYangweb.csproj
@@ -207,6 +207,7 @@
     <Content Include="Views\Production\CheckProduct.cshtml" />
     <Content Include="Views\Production\ImportProduct.cshtml" />
     <Content Include="Views\Production\CheckExportProduct.cshtml" />
+    <Content Include="Views\Production\ApproveExportProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
